Update contacts static shortcut
- Update vector/string to match messaging

Change-Id: I4cbe1aa04f66a4d82eedb9a7f379a29fd69a44e2

--- a/res/drawable/ic_add_circle_24dp.xml
+++ b/res/drawable/ic_add_circle_24dp.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2016 The Android Open Source Project
+<!--  Copyright (C) 2014-2017 The Dirty Unicorns Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -13,15 +13,27 @@
      See the License for the specific language governing permissions and
      limitations under the License.
 -->
-
-<!-- Customized ic_add_circle material asset. See b/30018040#comment12 -->
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:height="24dp"
-        android:width="24dp"
-        android:viewportHeight="192.0"
-        android:viewportWidth="192.0">
-  <path android:fillColor="#F5F5F5"
-        android:pathData="M96,8C47.38,8 8,47.38 8,96s39.38,88 88,88s88,-39.38 88,-88S144.62,8 96,8z"/>
-  <path android:fillColor="#039BE5"
-        android:pathData="M124,100h-24v24h-8v-24H68v-8h24V68h8v24h24V100z"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="512.000000"
+    android:viewportHeight="512.000000">
+
+    <group
+        android:translateY="512.000000"
+        android:scaleX="0.100000"
+        android:scaleY="-0.100000">
+        <path
+            android:fillColor="#11aef5"
+            android:strokeWidth="1"
+            android:pathData="M2375 4784 c-16 -2 -73 -9 -125 -15 -52 -6 -153 -26 -225 -44 -619 -156 -1125 -566
+-1405 -1137 -375 -765 -263 -1671 288 -2328 518 -619 1364 -893 2146 -696 621 157
+1126 567 1406 1138 375 765 263 1671 -288 2328 -326 389 -800 656 -1308 735 -95 15
+-426 28 -489 19z" />
+        <path
+            android:fillColor="#ffffff"
+            android:strokeWidth="1"
+            android:pathData="M2460 2960 l0 -230 -230 0 -230 0 0 -85 0 -85 230 0 230 0 0 -230 0 -230 85 0 85 0
+0 230 0 230 230 0 230 0 0 85 0 85 -230 0 -230 0 0 230 0 230 -85 0 -85 0 0 -230z" />
+    </group>
 </vector>
